# Smart-farm

./: .gitignore  README.md  auto_farm.ino
iot/: MQTT_SPEC.md  auto_right.ino  connector.py
iot/arduino/: auto_farm.ino  auto_right.ino
iot/rpi/: MQTT_SPEC.md  connector_new.py  device_info.yaml  image_sender.py  iot_connector.py  map_converter.py  pyproject.toml  ros_connector.py
server/: farm.db-journal  init.sql  pyproject.toml  test_dataset.sql
server/script/: db_instance.py  image_analyzer.py  main.py  mqtt_manager.py  ros_connector.py  state.py
server/script/db_manager/: datatype.py  manager.py  manager_test.py  schema.py  test_manager.py
server/script/map/: greenhouse1-1.pgm  greenhouse1-1.yaml  greenhouse1-1_plan.json  greenhouseA(2).pgm  greenhouseA(2).yaml  greenhouseA(2)_plan.json  greenhouseA.pgm  greenhouseA.yaml  map.pgm  map.yaml  map_converter.py
server/script/node/: battery.node.py  battery_node.py  image_sender.py  multiyolo.py  real_time_image.py
server/script/routes/: environment.py  home.py  logs.py  plants.py  robot.py
server/script/static/js/: map_utils.js  robot_manual_control.js  robot_schedule.js
server/script/templates/: _actuator_state.html  _chart_viewer.html  _filter_components.html  _logs_viewer.html  _logs_viewer_partial.html  _robot_selector.html  _robot_state.html  _sensor_state.html  base.html  environment.html  index.html  logs_plants.html  logs_robots.html  logs_sensors.html  plants.html  robot.html  robot_manual_control.html  robot_schedule.html  robot_settings.html
server/script/test/: test_manager.py
src/turtlebot3_remote/: package.xml  setup.cfg  setup.py  turtlebot3_main (copy).py
src/turtlebot3_remote/launch/: navigation2.launch.py  robot.launch.py  turtlebot3_kyu.launch.py  turtlebot3_remote.launch.py
src/turtlebot3_remote/map/: hard2_map.yaml  map.pgm  map.yaml  map1.yaml  real_map.yaml
src/turtlebot3_remote/param/nav2/: collision_monitor_params.yaml
src/turtlebot3_remote/turtlebot3_remote/: imu.py  robot_data_preprocessor.py  test_marker.py  turtlebot3_kyu (copy).py  turtlebot3_main.py  turtlebot3_map_publish.py  turtlebot3_test_gui.py
src/turtlebot3_remote/yaml/: mode_plan.yaml
turtlebot3_remote/: nav_tree.xml
turtlebot3_remote/launch/: turtlebot3_chan.launch.py  turtlebot3_main.launch.py
turtlebot3_remote/map/: hard2_map.pgm  real_map.pgm
turtlebot3_remote/turtlebot3_remote/: kyunav2_upgrade.py  (+7 more)
(+7 files in other folders)
