[project]
name = "smartfarm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bootstrap-flask>=2.5.0",
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "opencv-python>=4.13.0.92",
    "pymysql>=1.1.3",
    "pytest>=9.0.3",
    "requests>=2.33.1",
    "roslibpy>=2.0.0",
    "sqlalchemy>=2.0.49",
]
