[project]
name = "smartfarm-server"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.10.*"
dependencies = [
    "bootstrap-flask>=2.5.0",
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-socketio>=5.6.1",
    "flask-wtf>=1.3.0",
    "gevent>=26.5.0",
    "lark>=1.3.1",
    "numpy<2",
    "opencv-python<4.11",
    "paho-mqtt>=2.1.0",
    "pymysql>=1.1.3",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "roslibpy>=2.0.0",
    "sqlalchemy>=2.0.49",
    "websocket-client>=1.9.0",
]
[tool.uv]
package = false
